[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/control/h_flow_container.gd" type="Script" id=1]
[ext_resource path="res://scene/map/winmap.gd" type="Script" id=2]
[ext_resource path="res://scene/map/maptile.tscn" type="PackedScene" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="winmap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
win_size = Vector2( 480, 800 )
tw_from = Vector2( 0, 800 )
tw_to = Vector2( 0, 120 )
tw_duration = 2.0

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 480, 480 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3

[node name="maptile" parent="Viewport" instance=ExtResource( 3 )]

[node name="ViewTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
margin_bottom = -320.0
texture = SubResource( 1 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 480.0
margin_bottom = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="Container" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 193.0
script = ExtResource( 1 )
horizontal_margin = 5.0
vertical_margin = 5.0

[node name="bt_move_west" type="Button" parent="Panel/HBoxContainer"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
text = "Move to west"

[node name="Button2" type="Button" parent="Panel/HBoxContainer"]
margin_left = 125.0
margin_right = 191.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
text = "Button"

[node name="Button3" type="Button" parent="Panel/HBoxContainer"]
margin_left = 196.0
margin_right = 262.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
text = "Button"

[node name="Button4" type="Button" parent="Panel/HBoxContainer"]
margin_left = 267.0
margin_right = 333.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
text = "Button"

[node name="Button5" type="Button" parent="Panel/HBoxContainer"]
margin_left = 338.0
margin_right = 404.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
text = "Button"

[node name="bt_close" type="Button" parent="Panel/HBoxContainer"]
margin_top = 65.0
margin_right = 60.0
margin_bottom = 125.0
rect_min_size = Vector2( 60, 60 )
text = "Close"
[connection signal="gui_input" from="ViewTexture" to="Viewport/maptile" method="_on_gui_input"]
[connection signal="pressed" from="Panel/HBoxContainer/bt_move_west" to="." method="_on_bt_move_west_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/bt_close" to="." method="_on_bt_close_pressed"]
